<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="menu_item_delivery">Entregar</string>
	
	<string name="dialog_loading_title">Aguarde</string>
	<string name="dialog_loading_message">Carregando&#8230;</string>
	<string name="dialog_synchronizing_message">Sincronizando&#8230;</string>
	<string name="dialog_cleaning_datase">Limpando a base de dados&#8230;</string>
	<string name="dialog_error_title">Erro</string>
	<string name="dialog_error_message">Erro ao acessar a aplicação, tente novamente mais tarde.</string>
	
    <string name="app_name">Fiap Roupas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_lbl_login">LOGIN</string>
    <string name="login_txt_username_hint">Usuário</string>
    <string name="login_txt_password_hint">Senha</string>
    <string name="login_btn_login">Entrar</string>

    <string name="tablemenu_item_execute_deliver">Efetuar Entregas</string>
    <string name="tablemenu_item_deliveries_made">Entregas Realizadas</string>
    <string name="tablemenu_item_deliveries_for_tomorrow">Entregas para Amanhã</string>
    <string name="tablemenu_item_cancel_deliver">Cancelar Entregas</string>
    <string name="tablemenu_item_register_reason">Registrar Motivo</string>
    <string name="tablemenu_synchronize_delivers">Sincronizar Entregas</string>
    <string name="tablemenu_clean_database">Limpar Base de Dados</string>
    <string name="tablemenu_alter_password">Alterar Senha</string>
    <string name="tablemenu_logout">Logout</string>
    
    <string name="message_deliveries_synchronized_successfully">Entregas sincronizadas com sucesso.</string>
    <string name="message_database_cleaned_successfully">Base de dados limpa com sucesso.</string>
    
    <string name="tomorrow">Amanhã</string>
    
</resources>
