<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/login_backgroung_beige"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin" 
	>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginBottom="@dimen/activity_vertical_margin"
		android:layout_weight="4"
		android:background="@drawable/white_box" >

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:contentDescription="@string/app_name"
			android:src="@drawable/fiap_logo" />
	</FrameLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:layout_weight="5"
		android:background="@drawable/white_box"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin" >

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
			android:text="@string/login_lbl_login"
			android:textColor="@color/very_dark_gray"
			android:textSize="16sp"
			android:textStyle="bold" />

		<View
			android:layout_width="fill_parent"
			android:layout_height="2dp"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:background="@color/very_dark_gray" />

		<EditText
			android:id="@+id/txtUsername"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:hint="@string/login_txt_username_hint"
			android:textColor="@color/very_dark_gray"
			android:textSize="18sp" />

		<EditText
			android:id="@+id/txtPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:hint="@string/login_txt_password_hint"
			android:inputType="textPassword"
			android:textColor="@color/very_dark_gray"
			android:textSize="18sp" />

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<Button
				android:id="@+id/btnLogin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:background="@drawable/white_box"
				android:text="@string/login_btn_login"
				android:textColor="@drawable/white_box" 
				android:onClick="onBtnLoginClick"
				/>
		</FrameLayout>
	</LinearLayout>

</LinearLayout>